[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hunter-python-sdk"
version = "0.1.0"
description = "A small Python SDK for Hunter.io API v2"
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = "MIT"
authors = [
  {name = "Igor"},
]
dependencies = [
  "httpx>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "flake8>=7.0.0,<8.0.0",
  "mypy==1.10.0",
  "pytest>=8.0.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "respx>=0.21.0,<1.0.0",
  "setuptools>=68,<81",
  "wemake-python-styleguide>=0.19.0,<1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry]
packages = [
  {include = "hunter_sdk", from = "src"},
]
